k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /patient(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: patient-service
            port:
              number: 8081
      - path: /provider(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: provider-service
            port:
              number: 8082
      - path: /medicalrecord(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: medicalrecord-service
            port:
              number: 8083
      - path: /request(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: request-service
            port:
              number: 8084
